Issue #3168482 by tmakiel: (v 2.2) Fix spacing for reference paragraph

--- a/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
@@ -24,6 +24,7 @@ $d-p-reference-content-content-padding: 5px !default;
   > .field--name-field-d-p-reference-content {
     padding-top: 1.51rem;
     padding-bottom: $d-p-reference-content-padding-bottom;
+    margin-bottom: 1.51rem;
 
 
     @include media-breakpoint-up(xl) {
@@ -41,7 +42,13 @@ $d-p-reference-content-content-padding: 5px !default;
     }
   }
 
-  .field--type-text-long > :last-child {
-    margin-bottom: 0;
+  .field--name-field-d-long-text {
+    blockquote > :last-child {
+      margin-bottom: 0;
+    }
+    > :last-child {
+      margin-bottom: 0;
+    }
+
   }
 }
